--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.12.5",
+    "@mysten/sui.js": "^0.51.0",
+    "@tanstack/react-query": "^5.28.6",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
